# gptop

./: ,   .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  cargo
.github/workflows/: ci.yml
docs/: configuration.md  index.md  install.md  json.md  usage.md
docs/backends/: apple.md  nvidia.md
pkg/: release.py
pkg/homebrew/: gptop.rb
src/: app.rs  config.rs  main.rs
src/backend/: mod.rs  nvidia.rs
src/backend/apple/: coreutils.rs  hid.rs  ioreport.rs  memory.rs  mod.rs  smc.rs
src/benchmark/: compare.rs  kernels.rs  metal_kernels.rs  metrics.rs  mod.rs  printer.rs  runner.rs  storage.rs  types.rs
src/ui/: charts.rs  mod.rs  processes.rs
